test/should-fail/vsgc3106Test.f3
/**
 * VSGC-3106 Sequence variable with public-init modifier can 
 * be updated outside of script file.
 *
 * @subtest
 */

public class vsgc3106Test {
    public-init var seq : String[];
}

